Fix css to align tiles on board better

--- a/automated-automa/src/Components/GoalTileBoard/goal-tile-board.css
+++ b/automated-automa/src/Components/GoalTileBoard/goal-tile-board.css
@@ -14,14 +14,14 @@
 
 .tile-container {
     width: 17.5%;
-    height: 100%;
+    height: calc(100% - 10px);
     display: grid;
-    grid-template-rows: repeat(4, 21.2%);
+    grid-template-rows: repeat(4, 22.8%);
     grid-template-columns: 100%;
-    row-gap: 2%;
+    row-gap: 0.7%;
     font-size: 0.75rem;
     position: absolute;
-    top: 3.6%;
+    top: 3.4%;
     left: 7.5%;
 }
 
