--- a/automated-automa/src/Components/RoundGoalTile/round-goal-tile.css
+++ b/automated-automa/src/Components/RoundGoalTile/round-goal-tile.css
@@ -1,4 +1,5 @@
 .goal-tile__corners {
+    aspect-ratio: 1 / 1;
     width: 100%;
     height: 100%;
     background-color: #9e958e;
